Removed radio buttons and replaced with plus/minus buttons. fixed typo on 6pm row. Updated css and js files

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p>25 Mins</p>
     </div>
     <div class="col-md-3 star-col">
-      <!-- <p>stars<br>(1 = Poorly 5=Super Job)</p>-->
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
       <button id="minus" onclick="removeimage()"><i class="fa fa-minus"></i></button>
       <button id="plus" onclick="addimage()"><i class="fa fa-plus" aria-hidden="true"></i></button>
       <div id="star-container-1"></div>
@@ -75,27 +75,11 @@
       5 Mins
     </div>
     <div class="col-md-3 star-col">
-      <div id="star-container"><img src="img/rainbow-star-2.png" width="50" height="50" /></div>
-      <div class="star-selection">
-        <form>
-          <input type="radio" id="1" name="starsEarned" value="1">
-          <label for="1">1</label>
-
-          <input type="radio" id="2" name="starsEarned" value="2">
-          <label for="2">2</label>
-
-          <input type="radio" id="3" name="starsEarned" value="3">
-          <label for="3">3</label>
-
-          <input type="radio" id="4" name="starsEarned" value="4">
-          <label for="4">4</label>
-
-          <input type="radio" id="5" name="starsEarned" value="5">
-          <label for="5">5</label>
-        </form>
-
-      </div>
-    </div>
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
+      <button id="minus" onclick="removeimage2()"><i class="fa fa-minus"></i></button>
+      <button id="plus" onclick="addimage2()"><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <div id="star-container-2"></div>
+    </div>  
     <div class="col-md-4 comments-col">
       <textarea rows="4" cols="30" name="comment" placeholder="Comments here..."></textarea>
     </div>
@@ -108,26 +92,10 @@
       5 Mins
     </div>
     <div class="col-md-3 star-col">
-      <div id="star-container"><img src="img/rainbow-star-2.png" width="50" height="50" /></div>
-      <div class="star-selection">
-        <form>
-          <input type="radio" id="1" name="starsEarned" value="1">
-          <label for="1">1</label>
-
-          <input type="radio" id="2" name="starsEarned" value="2">
-          <label for="2">2</label>
-
-          <input type="radio" id="3" name="starsEarned" value="3">
-          <label for="3">3</label>
-
-          <input type="radio" id="4" name="starsEarned" value="4">
-          <label for="4">4</label>
-
-          <input type="radio" id="5" name="starsEarned" value="5">
-          <label for="5">5</label>
-        </form>
-
-      </div>
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
+      <button id="minus" onclick="removeimage3()"><i class="fa fa-minus"></i></button>
+      <button id="plus" onclick="addimage3()"><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <div id="star-container-3"></div>
     </div>
     <div class="col-md-4 comments-col">
       <textarea rows="4" cols="30" name="comment" placeholder="Comments here..."></textarea>
@@ -141,26 +109,10 @@
       5 Mins
     </div>
     <div class="col-md-3 star-col">
-      <div id="star-container"><img src="img/rainbow-star-2.png" width="50" height="50" /></div>
-      <div class="star-selection">
-        <form>
-          <input type="radio" id="1" name="starsEarned" value="1">
-          <label for="1">1</label>
-
-          <input type="radio" id="2" name="starsEarned" value="2">
-          <label for="2">2</label>
-
-          <input type="radio" id="3" name="starsEarned" value="3">
-          <label for="3">3</label>
-
-          <input type="radio" id="4" name="starsEarned" value="4">
-          <label for="4">4</label>
-
-          <input type="radio" id="5" name="starsEarned" value="5">
-          <label for="5">5</label>
-        </form>
-
-      </div>
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
+      <button id="minus" onclick="removeimage4()"><i class="fa fa-minus"></i></button>
+      <button id="plus" onclick="addimage4()"><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <div id="star-container-4"></div>
     </div>
     <div class="col-md-4 comments-col">
       <textarea rows="4" cols="30" name="comment" placeholder="Comments here..."></textarea>
@@ -168,32 +120,16 @@
   </div>
   <div class="row time-rows">
     <div class="col-md-3 sch-time-col">
-      <h4>6 AM</h4>
+      <h4>6 PM</h4>
     </div>
     <div class="col-md-2 timer-amount-col">
       5 Mins
     </div>
     <div class="col-md-3 star-col">
-      <div id="star-container"><img src="img/rainbow-star-2.png" width="50" height="50" /></div>
-      <div class="star-selection">
-        <form>
-          <input type="radio" id="1" name="starsEarned" value="1">
-          <label for="1">1</label>
-
-          <input type="radio" id="2" name="starsEarned" value="2">
-          <label for="2">2</label>
-
-          <input type="radio" id="3" name="starsEarned" value="3">
-          <label for="3">3</label>
-
-          <input type="radio" id="4" name="starsEarned" value="4">
-          <label for="4">4</label>
-
-          <input type="radio" id="5" name="starsEarned" value="5">
-          <label for="5">5</label>
-        </form>
-
-      </div>
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
+      <button id="minus" onclick="removeimage5()"><i class="fa fa-minus"></i></button>
+      <button id="plus" onclick="addimage5()"><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <div id="star-container-5"></div>
     </div>
     <div class="col-md-4 comments-col">
       <textarea rows="4" cols="30" name="comment" placeholder="Comments here..."></textarea>
@@ -206,6 +142,7 @@
       <ul>
         <li>Change pullup</li>
         <li>Sit on potty for 5mins</li>
+        <li>Bath / Shower</li>
         <li>Brush teeth</li>
         <li>Bedtime at 9pm</li>
       </ul>
@@ -215,26 +152,10 @@
       <p style="font-weight: 600; font-size:15px;">(If Jonathan takes a bath it will be for 20-30mins)</p>
     </div>
     <div class="col-md-3 star-col">
-      <div id="star-container"><img src="img/rainbow-star-2.png" width="50" height="50" /></div>
-      <div class="star-selection">
-        <form>
-          <input type="radio" id="1" name="starsEarned" value="1">
-          <label for="1">1</label>
-
-          <input type="radio" id="2" name="starsEarned" value="2">
-          <label for="2">2</label>
-
-          <input type="radio" id="3" name="starsEarned" value="3">
-          <label for="3">3</label>
-
-          <input type="radio" id="4" name="starsEarned" value="4">
-          <label for="4">4</label>
-
-          <input type="radio" id="5" name="starsEarned" value="5">
-          <label for="5">5</label>
-        </form>
-
-      </div>
+      <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
+      <button id="minus" onclick="removeimage6()"><i class="fa fa-minus"></i></button>
+      <button id="plus" onclick="addimage6()"><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <div id="star-container-6"></div>
     </div>
     <div class="col-md-4 comments-col">
       <textarea rows="4" cols="30" name="comment" placeholder="Comments here..."></textarea>
