added clock icon and style edits for the mins section.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-md-3">
       stars earned<br>
-      <p>(1 = Poorly 5=Super Job)</p>
+      <p>(1 = Needs Improvement 5=Super Job)</p>
     </div>
     <div class="col-md-4">
       comments
@@ -55,6 +55,7 @@
       </ul>
     </div>
     <div class="col-md-2 timer-amount-col">
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
       <p>25 Mins</p>
     </div>
     <div class="col-md-3 star-col">
@@ -72,7 +73,8 @@
       <h4>10 AM</h4>
     </div>
     <div class="col-md-2 timer-amount-col">
-      5 Mins
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
+      <p>5 Mins</p>
     </div>
     <div class="col-md-3 star-col">
       <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
@@ -89,7 +91,8 @@
       <h4>11:30 AM - 12 PM</h4>
     </div>
     <div class="col-md-2 timer-amount-col">
-      5 Mins
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
+      <p>5 Mins</p>
     </div>
     <div class="col-md-3 star-col">
       <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
@@ -106,7 +109,8 @@
       <h4>3 PM</h4>
     </div>
     <div class="col-md-2 timer-amount-col">
-      5 Mins
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
+      <p>5 Mins</p>
     </div>
     <div class="col-md-3 star-col">
       <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
@@ -123,7 +127,8 @@
       <h4>6 PM</h4>
     </div>
     <div class="col-md-2 timer-amount-col">
-      5 Mins
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
+      <p>5 Mins</p>
     </div>
     <div class="col-md-3 star-col">
       <p>stars<br>(1 = Needs Improvement 5=Super Job)</p>
@@ -148,6 +153,7 @@
       </ul>
     </div>
     <div class="col-md-2 timer-amount-col">
+      <i class="fa fa-clock-o" aria-hidden="true"></i>
       <p>15 Mins - 50 Mins</p>
       <p style="font-weight: 600; font-size:15px;">(If Jonathan takes a bath it will be for 20-30mins)</p>
     </div>
